tests/errors/val_param.pa
program gcd2(output);
var a : integer;
	c : boolean;

function asd(b : boolean) : integer;
	begin
		
	end;

begin
VAL(PARAMSTR(asd(false)), c);
	{paramcount := paramcount;}
end.

